--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,11 @@ img {
     color: #0c0c0c;
 }
 
+.hero-link:hover,
+.hero-link:focus {
+    color: #3350E9;
+}
+
 /* #endregion hero */
 
 /* #region  */
@@ -232,6 +237,12 @@ img {
     line-height: 1.3;
     text-align: center;
     color: #fbfbfb;
+
+}
+
+.about-us-link:hover,
+.about-us-link:focus {
+    background: #1f3cd4;
 }
 
 /* #endregion */
