--- a/css/styles.css
+++ b/css/styles.css
@@ -296,3 +296,41 @@ img {
 }
 
 /* #endregion */
+
+.advertisement .container {
+    background: #0c0c0c;
+    border-radius: 30px;
+    display: flex;
+    padding: 83px 80px;
+    justify-content: space-between;
+}
+
+.advertisement {}
+
+.container {}
+
+.advertisement-text {
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 0.91667;
+    letter-spacing: -0.02em;
+    color: #fbfbfb;
+    max-width: 690px;
+}
+
+.story {
+    color: rgba(251, 251, 251, 0.5);
+}
+
+.advertisement-link {
+    border: 1px solid rgba(251, 251, 251, 0.15);
+    border-radius: 16px;
+    width: 160px;
+    height: 48px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+    padding: 15px 43px;
+}
